# Zadacha_Autumn2

./: CMakeLists.txt  CStack.h  README.md  Text1.txt  Text2.txt  auto1.txt  auto2.txt  autotest.cpp  func.cpp  main.cpp
